link pages in header

--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -54,12 +54,12 @@
                 <!--Second item-->
                 <div class="dropdown pull-left nav-child-space">
                     
-                    <button class="dropbtn nav-child-color"><i class="fas fa-warehouse"></i>
-                        <div class="custom-resize-font">Stations</div>
+                    <button class="dropbtn nav-child-color" onclick="redirectToStations()"><i class="fas fa-warehouse"></i>
+                        <div onclick="redirectToStations()" class="custom-resize-font">Stations</div>
                     </button>
                     <div class="dropdown-content font-Sego">
                         <a href="#">Live Station</a>
-                        <a href="#">Station Detail</a>
+                        <a href="station.html">Station Detail</a>
                     </div>
                 </div>
 
@@ -70,19 +70,19 @@
                             <div class="custom-resize-font">Tourism</div>
                         </button>
                         <div class="dropdown-content font-Sego">
-                            <a href="#">Packages</a>
-                            <a href="#">Rules and Regulations</a>
+                            <a href="pakage.html">Packages</a>
+                            <a href="rules.html">Rules and Regulations</a>
                         </div>
                     </div>
 
                 <!--forth item-->
                 <div class="dropdown pull-left nav-child-space">
                     
-                        <button class="dropbtn nav-child-color"><i class="fas fa-credit-card"></i>
-                            <div class="custom-resize-font">Seasons</div>
+                        <button class="dropbtn nav-child-color" onclick="redirectToSeason()"><i class="fas fa-credit-card"></i>
+                            <div onclick="redirectToSeason()" class="custom-resize-font">Seasons</div>
                         </button>
                         <div class="dropdown-content font-Sego">
-                            <a href="#">Seasons Tickets</a>
+                            <a href="season.html">Seasons Tickets</a>
                             <a href="#">Seasons Fare calculator</a>
                         </div>
                 </div>
