--- a/Layout/TicketSearch.html
+++ b/Layout/TicketSearch.html
@@ -60,7 +60,6 @@
                         });
 
 
-                        
                 });
 
                 function addNewReview(){
@@ -107,6 +106,11 @@
                                         }
                                 });
                         }
+
+                function RederectPayment(){
+                        event.preventDefault()
+                        location.href = "payment.html";
+                }
 
 
 
@@ -251,7 +255,7 @@
                                                                                 <label id="lblTrain_1_Class_1_remains" class="div-status-remains">15 to Remaining(s)</label>
                                                                         </div>
                                                                         <div class="center">
-                                                                                <button class="button-sm" style="margin-left: 2%;">Book</button>
+                                                                                <button onclick="RederectPayment()" class="button-sm" style="margin-left: 2%;">Book</button>
                                                                         </div>
                                                                 </fieldset>
 
@@ -263,7 +267,7 @@
                                                                                 <label id="lblTrain_1_Class_2_availability" class="div-status-remains">10 to Remaining(s)</label>
                                                                         </div>
                                                                         <div class="center">
-                                                                                <button class="button-sm" style="margin-left: 2%;">Book</button>
+                                                                                <button onclick="RederectPayment()" class="button-sm" style="margin-left: 2%;">Book</button>
                                                                         </div>
                                                                 </fieldset>
                                                         </div>
@@ -294,7 +298,7 @@
                                                                                 <label id="lblTrain_2_Class_1_remains" class="div-status-remains">15 to Remaining(s)</label>
                                                                         </div>
                                                                         <div class="center">
-                                                                                <button class="button-sm" style="margin-left: 2%;">Book</button>
+                                                                                <button onclick="RederectPayment()" class="button-sm" style="margin-left: 2%;">Book</button>
                                                                         </div>
                                                                 </fieldset>
 
@@ -306,7 +310,7 @@
                                                                                 <label id="lblTrain_2_Class_2_availability" class="div-status-remains">10 to Remaining(s)</label>
                                                                         </div>
                                                                         <div class="center">
-                                                                                <button class="button-sm" style="margin-left: 2%;">Book</button>
+                                                                                <button onclick="RederectPayment()" class="button-sm" style="margin-left: 2%;">Book</button>
                                                                         </div>
                                                                 </fieldset>
                                                         </div>
@@ -337,7 +341,7 @@
                                                                                 <label id="lblTrain_3_Class_1_remains" class="div-status-remains">15 to Remaining(s)</label>
                                                                         </div>
                                                                         <div class="center">
-                                                                                <button class="button-sm" style="margin-left: 2%;">Book</button>
+                                                                                <button onclick="RederectPayment()" class="button-sm" style="margin-left: 2%;">Book</button>
                                                                         </div>
                                                                 </fieldset>
 
@@ -349,7 +353,7 @@
                                                                                 <label id="lblTrain_3_Class_2_remains" class="div-status-remains">10 to Remaining(s)</label>
                                                                         </div>
                                                                         <div class="center">
-                                                                                <button class="button-sm" style="margin-left: 2%;">Book</button>
+                                                                                <button onclick="RederectPayment()" class="button-sm" style="margin-left: 2%;">Book</button>
                                                                         </div>
                                                                 </fieldset>
                                                         </div>
