--- a/Layout/pakage.html
+++ b/Layout/pakage.html
@@ -26,7 +26,7 @@
 
         //Jquery function for load nevigation to page
         $(function () {
-            $('#Header').html(getHeaderLG());
+            $('#Header').html(getHeaderMD());
             $('#footerID').html(getFooter());
         });
 
