--- a/Layout/register1.html
+++ b/Layout/register1.html
@@ -89,7 +89,7 @@
 
                             <div style="width: 80%;margin-top: 2%">
                                     <label for="txtEmail" required>Email :</label>
-                                    <input type="email" id="txtEmail" name="txtbFrom" size="50%" required>
+                                    <input type="email" id="txtEmail" name="txtbFrom" size="50%" height="5vh" required>
                             </div><br>
 
                             <div   style="width: 80%;margin-top: 2%">
