--- a/Layout/aboutUs.html
+++ b/Layout/aboutUs.html
@@ -57,13 +57,17 @@
 
         <h2> As a Private Train Reservation Company,  we are willng to provide the best and the most convenient booking experience to our valuble customers in a very favorable manner.<br></h2>
 
+        <!--  adding a youtube video -->
+        <iframe width="1000" height="500" src="https://www.youtube.com/embed/-b-4vUoZmGQ" allowfullscreen></iframe>
+
+
         <div id="div-last">
             <h1 id="h1-align" class="div-text"> <u>Awards</u> </h2>
             <h4 id="h4-align" class="div-text">
             <div class="row">
                 <div class="column">
             </div>
-                <div class="column">
+                <div class="column-last">
                     <div id="div-align">
                         BOOkit wins Diamond Awards in Company of the Year at XXXX Awards 2019<br/>
                         BOOKit wins Gold Awards Comapny of the Year at XXXX Awards 2018<br/>
