--- a/Layout/contactUs.html
+++ b/Layout/contactUs.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
+    <!--character encoding for HTML document -->
     <meta charset="UTF-8" />
+    <!--make the webpage responsive, relative to resolution -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
     <title>BOOkit-Contact Us</title>
@@ -31,71 +33,65 @@
     <!--Navigation Bar -->
     <div id="Header"></div>
 
-    <!--Page Content -->
+    <!--Page Content width="650px" height="500px" hspace="8px"-->
     <div style="height:100%">
-    <h2 style="text-align:center">Get in Touch with US</h2>
+    <h1 style="text-align:center">Get in Touch with US</h1>
     <div class="row">
-        <img src="../resources/train.jpg" alt="Train 1" width="650" height="500" hspace="8px">
+        <img src="../resources/train.jpg" alt="Train 1">
         <div class="column-cus">
         </div>
         <div class="column-cus" style="background-color:white;">
-            <h3 style="text-align:center"> Please note that every field is required***</h3>
-                <form action="################">
-                    <label for="fname">First Name*</label>
-                    <br/>
-                    <input type="text" name="formFN">
-                    <br/><br/>
-                    <label for="lname">Last Name*</label>
-                    <br/>
-                    <input type="text" name="formLN">
-                    </br><br/>
-                    <label for="email">E-mail*</label>
-                    <br/>
-                    <input type="text" name="formEmail">
-                    <br/><br/>
-                    <label for="contact">Contact No*</label>
-                    <br/>
-                    <input type="text" name="formContact">
-                    <br/><br/>
-                    <label for="contact">Country*</label>
-                    <br/><br/>
-                    
-                    <select name="dropdown">
-                        <option value="country">country 1</option>
-                        <option value="country">country 2</option>
-                        <option value="country">country 3</option>
-                        <option value="country">country 4</option>
-                    </select>
-                    </br><br/>
-                    <label for="message">Message*</label>
-                    <br/>
-                    <input type="text" name="message">
-                    <br/><br/>
-                    <input type="checkbox" name="agreement"> I`d like to receive more information about Bookit, and i understand and agree to the privacy.
+            <h2 style="text-align:center"> Please note that every field is required***</h2>
+                <form action="#">
+                    <h2>
+                        <label for="fname">First Name*</label>
+                        <br/>
+                        <input type="text" name="formFN">
+                        <br/><br/>
+                        <label for="lname">Last Name*</label>
+                        <br/>
+                        <input type="text" name="formLN">
+                        </br><br/>
+                        <label for="email">E-mail*</label>
+                        <br/>
+                        <input type="text" name="formEmail">
+                        <br/><br/>
+                        <label for="contact">Contact No*</label>
+                        <br/>
+                        <input type="text" name="formContact">
+                        <br/><br/>
+                        <label for="contact">Country*</label>
+                        <br/><br/>
+                        
+                        <select name="dropdown" id="dropdown-font">
+                            <option value="country">country 1</option>
+                            <option value="country">country 2</option>
+                            <option value="country">country 3</option>
+                            <option value="country">country 4</option>
+                            <option value="country">country 5</option>
+                            <option value="country">country 6</option>
+                            <option value="country">country 7</option>
+                            <option value="country">country 8</option>
 
-                    <p>Opting in for additional information is not required to receive this content. All the data is protected and secuired as outlined in our privacy policy.</p>
-                    
-                    <p id="p-align1">
-                    <button class="button">Send Message</button>
+                        </select>
+                        </br><br/>
+                        <label for="message">Message*</label>
+                        <br/>
+                        <input type="text" name="message">
+                        <br/><br/>
+                        <input type="checkbox" name="agreement"> I`d like to receive more information about Bookit, and i understand and agree to the privacy.
+
+                        <p>Opting in for additional information is not required to receive this content. All the data is protected and secuired as outlined in our privacy policy.</p>
+                        
+                        <p id="p-align1">
+                        <button class="button">Send Message</button>
+                    </h2>
                     </p>
                 </form>
             </div>
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-     
     <!--Footer -->
     <footer id="footerID"></footer>
 </body>
