--- a/Style/style-contactUs.css
+++ b/Style/style-contactUs.css
@@ -29,6 +29,12 @@ input[type=text] {
     border-bottom: 2px solid #B2B2B2;
   }
 
+
+#dropdown-font {
+  font-size: 23px;
+  width: 90%;
+}
+
 .select {
     color: #ffffff;
     padding: 8px 16px;
@@ -56,4 +62,8 @@ img {
     opacity: 0.5;
     filter: alpha(opacity=50);
     margin-top: 4%;
+    width: 977px;
+    height: 611px;
+    margin-left: 8px;
+    margin-right: 8px;
   }
