--- a/Layout/login.html
+++ b/Layout/login.html
@@ -51,12 +51,23 @@
                         <div class="col-md-3">
                                 <i class="fas fa-user-tie font-size-6"></i>
                         </div>
+                        <div class="verl"></div>
                         <div class="col-md-3">
                                 <label for="txtContact">User name or email:</label>
                                 <input type="text" id="txtContact" name="txtbFrom"> <br>
 
                                 <label for="txtContact" style="margin-top: 5%;">Password:</label>
                                 <input type="text" id="txtContact" name="txtbFrom">
+                            <div class="fpword">
+                                <a href="./reset.html">Forget password..?</a>
+                            </div>
+                            <div class="lgbutton">
+                                Log-in
+                            </div>
+                              <div class="creacc">
+                                  <a href="./register1.html">Create your account..</a>
+                              </div>
+
                         </div>
                 </div>
                 
