--- a/Style/style-login.css
+++ b/Style/style-login.css
@@ -85,7 +85,7 @@
                   }
 
 
-                  .vl {
+                  .verl {
                     position: absolute;
                     left: 50%;
                     transform: translate(-50%);
