--- a/Layout/season.html
+++ b/Layout/season.html
@@ -1,59 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel = "stylesheet" href = "../style/style-season.css" >
-	    <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <title>Season Form </title>       
+
+		<meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" type="image/x-icon" href="../resources/favicon-train.ico" />
+
+        <!--Fontawesome-->
+        <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.css" />
+        <link rel="stylesheet" href="../fontawesome/css/fontawesome.min.css" />
+        
+        <!--Navigation bar and footer-->
+        <link rel="stylesheet" type="text/css" href="../Style/style-custom.css" />
+        <link rel="stylesheet" type="text/css" href="../Style/style-custom-nav.css" />
+
+        <!--style sheets for this page only-->
+		<link rel = "stylesheet" href = "../style/style-season.css" >
+
+        <!--jquery-->
+        <script src="../Script/jquery-3.3.1.min.js"></script>
+        <!--jquery UI-->
+        <script src="../Script/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="../Style/jquery-ui.css" />
+
+
+
+        <!--Herder js file-->
+		<script src="../Script/Header.js"></script>
+
+	    
+		 <title>Season Form </title>  
+		 
+		 <script>
+			 $(function () {
+                        $("#Header").html(getHeaderMD());
+                        $("#footerID").html(getFooter());
+				});
+				
+				function alrt()
+				{
+					alert("your details entered successfully!!!");
+				}
+		 </script>
 
 <body>
 
-<script>
-function alrt()
-{
-	alert("your details entered successfully!!!");
-}
+	<!--Navigation Bar -->
+	<div id="Header"></div>
 
-</script>
-	<h1><center>Student Season Forum</center></h1>
-	<div class="row">
-		<div class="column left" style="">
-		<form name="form1" action="SeasonDetails.html" target="_blank" method="post">
-			<h4>First Name</h4><input type = "name"  value = ""><hr/>
-			<h4>Last Name</h4><input type = "name"  value = ""><hr/>
-			<h4>NIC number</h4><input type = "text" value = "" maxlength = "10"><hr/>
-			<h4>E-mail</h4><input type = "email"  value = ""><hr/>
-  
-			<br/><br/>
+<!--Page Content -->
+<div style="height:100%">
+		<h1><center>Student Season Forum</center></h1>
+		<div class="row">
+			<div class="column left" style="">
+			<form name="form1" action="SeasonDetails.html" target="_blank" method="post">
+				<h4>First Name</h4><input type = "name"  value = ""><hr/>
+				<h4>Last Name</h4><input type = "name"  value = ""><hr/>
+				<h4>NIC number</h4><input type = "text" value = "" maxlength = "10"><hr/>
+				<h4>E-mail</h4><input type = "email"  value = ""><hr/>
+	  
+				<br/><br/>
+			</div>
 		</div>
-	</div>
-	<center>
-  		<div class = "button" >
-		 <input type="submit" value="Submit" onclick ="alrt()"> </div></center>
-		<div class="column right" style="">
+		<center>
+			  <div class = "button" >
+			 <input type="submit" value="Submit" onclick ="alrt()"> </div></center>
+			<div class="column right" style="">
+				
+					<h4>Starting Station</h4><input type = "name" value = ""><hr/>
+					<h4>Ending Station</h4><input type = "name" value = ""><hr/>
+					<h4>School</h4><input type = "name" value = ""><hr/>
+					<h4>Season issuing month</h4>
+		<select name="Select Month">
+		 <form action="">
+			<option value = "January">January</option>
+			<option value = "February">February</option>
+			<option value = "March">March</option>
+			<option value = "April">April</option>
+			<option value = "May">May</option>
+			<option value = "June">June</option>
+			<option value = "July">July</option>
+			<option value = "August">August</option>
+			<option value = "September">September</option>
+			<option value = "October">October</option>
+			<option value = "November">November</option>
+			<option value ="December">December</option>
+			 </select>
+		<hr/>
+		</div>
 			
-				<h4>Starting Station</h4><input type = "name" value = ""><hr/>
-				<h4>Ending Station</h4><input type = "name" value = ""><hr/>
-				<h4>School</h4><input type = "name" value = ""><hr/>
-				<h4>Season issuing month</h4>
-	<select name="Select Month">
-     <form action="">
-		<option value = "January">January</option>
-		<option value = "February">February</option>
-		<option value = "March">March</option>
-		<option value = "April">April</option>
-		<option value = "May">May</option>
-		<option value = "June">June</option>
-		<option value = "July">July</option>
-		<option value = "August">August</option>
-		<option value = "September">September</option>
-		<option value = "October">October</option>
-		<option value = "November">November</option>
-		<option value ="December">December</option>
-		 </select>
-	<hr/>
-	</div>
-		
+</div>
+	
+
+<!--Footer -->
+<footer id="footerID"></footer>
 			
 		
 </body>
